<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/border_empty_purple"
  android:padding="@dimen/main_padding"
  tools:context=".FragmentInfo">
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:text="@string/info_text_0"
      android:gravity="center"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      />
  
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:text="@string/info_text_1"
      android:gravity="center"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      />
  
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:text="@string/info_text_2"
      android:gravity="center"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      />
  
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:text="@string/info_text_3"
      android:gravity="center"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      />
  
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:text="@string/info_text_4"
      android:gravity="center"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      />
  
    <ImageButton
      android:id="@+id/info_source"
      android:layout_width="@dimen/info_image_size"
      android:layout_height="@dimen/info_image_size"
      android:scaleType="centerCrop"
      android:layout_gravity="center"
      android:background="@null"
      android:tint="@color/green"
      android:src="@drawable/info_github"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      android:layout_marginHorizontal="@dimen/info_button_margin_H"
      />
  
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:text="@string/info_text_5"
      android:gravity="center"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      />
  
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="horizontal"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      >
    
      <ImageButton
        android:id="@+id/info_instagram"
        android:layout_width="@dimen/info_image_size"
        android:layout_height="@dimen/info_image_size"
        android:scaleType="centerCrop"
        android:background="@null"
        android:tint="@color/red"
        android:src="@drawable/info_instagram"
        android:layout_marginHorizontal="@dimen/info_button_margin_H"
        />
    
      <ImageButton
        android:id="@+id/info_telegram"
        android:layout_width="@dimen/info_image_size"
        android:layout_height="@dimen/info_image_size"
        android:scaleType="centerCrop"
        android:background="@null"
        android:tint="@color/blue"
        android:src="@drawable/info_telegram"
        android:layout_marginHorizontal="@dimen/info_button_margin_H"
        />
  
    </LinearLayout>
  
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/white_transparent"
      android:text="@string/info_final_joke"
      android:gravity="center"
      android:layout_marginVertical="@dimen/info_item_margin_V"
      />
    
  </LinearLayout>
  
</ScrollView>